# name: TestEvents.test_event_property_values
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_filter_by_person_for_person_on_events_enabled
  '
  /* user_id:0 request:_snapshot_ */
  SELECT uuid,
         event,
         properties,
         timestamp,
         team_id,
         distinct_id,
         elements_chain,
         created_at
  FROM events
  where team_id = 2
    AND timestamp > '2020-01-19 20:00:00.000000'
    AND timestamp < '2020-01-20 20:00:05.000000'
    AND person_id = '00000000-0000-4000-8000-000000000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_filter_by_person_for_person_on_events_enabled.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT uuid,
         event,
         properties,
         timestamp,
         team_id,
         distinct_id,
         elements_chain,
         created_at
  FROM events
  where team_id = 2
    AND timestamp < '2020-01-20 20:00:05.000000'
    AND person_id = '00000000-0000-4000-8000-000000000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_filter_by_person_for_person_on_events_enabled.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT uuid,
         event,
         properties,
         timestamp,
         team_id,
         distinct_id,
         elements_chain,
         created_at
  FROM events
  where team_id = 2
    AND timestamp > '2020-01-19 20:00:00.000000'
    AND timestamp < '2020-01-20 20:00:05.000000'
    AND person_id = '00000000-0000-4000-8000-000000000001'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_filter_by_person_for_person_on_events_enabled.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT uuid,
         event,
         properties,
         timestamp,
         team_id,
         distinct_id,
         elements_chain,
         created_at
  FROM events
  where team_id = 2
    AND timestamp < '2020-01-20 20:00:05.000000'
    AND person_id = '00000000-0000-4000-8000-000000000001'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
